# nn-compiler

./: .gitignore  build_mlir.txt  mlir_import.py  model.py  test.py  train.py
compiler/: CMakeLists.txt  CMakePresets.json  README.md  TransposeFolderPass.cpp  TransposeFolderPass.h  main.cpp
compiler/Transforms/: TransposeFolder.cpp  TransposeFolder.h
compiler/examples/: 00_input.mlir  01_transpose_folded.mlir  02_remark.mlir
compiler/include/ToyNPU/: CMakeLists.txt  Passes.h  Passes.td  ToyNPUDialect.h  ToyNPUDialect.td  ToyNPUOps.h  ToyNPUOps.td
compiler/include/toynpu/Transforms/: TransposeFolder.h  TransposeFolderPass.h
compiler/lib/: CMakeLists.txt
compiler/lib/Tools/: toynpu-opt.cpp
compiler/lib/ToyNPU/: CMakeLists.txt  TransposeFolder.cpp  toynpu-opt.cpp
compiler/lib/Transforms/: TransposeFolder.cpp  TransposeFolderPass.cpp
mlir-kernel/01_kernel_outlining/: kernel_outlining.mlir  kernel_outlining_out.mlir  run.sh
mlir-kernel/02_kernel_outlining_unknown_dims/: kernel_outlining_unknown_dims.mlir  kernel_outlining_unknown_dims_out.mlir  run.sh
mlir-kernel/03_memory/: 01_memory.mlir  03_nvvm.mlir  04_llvm.mlir  05_binary.mlir  06_binary.ll  run.sh
mlir-kernel/04_memory_bare_pointers/: 02_kernel_outlining.mlir  03_nvvm.mlir  04_llvm.mlir  05_binary.mlir  06_binary.ll  run.sh
mlir-kernel/05_run/: 01_run.mlir  02_llvm.mlir  build.sh  run.sh
npu/: instruction_set.ipynb  linear.ipynb  mnist_torch.ipynb  pe.ipynb
output/: 01_raw.mlir  02_torch.mlir  03_linalg.mlir  03_stablehlo.mlir  03_tosa.mlir  04_linalg_commented.mlir
simulator/: Makefile  assembler.c  assembler.h  common.h  controller.c  controller.h  main.c  simulator.c  simulator.h
